SONAR-5622 Use an ellipsis on test file name to prevent having a scrollbar

--- a/server/sonar-web/src/main/less/style.less
+++ b/server/sonar-web/src/main/less/style.less
@@ -2759,6 +2759,7 @@ text.max-results-reached-message {
 .bubble-popup-container {
   max-width: 560px;
   max-height: 300px;
+  padding-right: 30px;
   overflow: auto;
 }
 
